[package]
name = "todo-git"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/UtsavBalar1231/todo-git"
description = "A simple GitHub issues based todo list application written in Rust"

[dependencies.serde_json]
version = "1.0.105"

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.tokio]
version = "1.32.0"
features = ["macros", "rt-multi-thread"]

[dependencies.reqwest]
version = "0.11.20"
features = ["json"]

[dependencies.clap]
version = "4.4.1"
features = ["derive"]

[dependencies.spinoff]
version = "0.8.0"
